syntax = "proto3";
package item;

message Item {
    string id = 1;
    string name = 2;
    string description = 3;
}

message GetItemRequest {
    string id = 1;
}

message ListItemsRequest {
}

message ListItemsResponse {
    repeated Item items = 1;
}

service ItemService {
    rpc GetItem(GetItemRequest) returns (Item);
    rpc ListItems(ListItemsRequest) returns (ListItemsResponse);
}

